--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-<link rel="stylesheet" href="styles.css">
-
+<head>
+    <link rel="stylesheet" href="styles.css">
+    <title>Aluraflix</title>
+</head>     
 <body>
 
     <header>ALURAFLIX</header>
