--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<html>
+
 <head>
     <link rel="stylesheet" href="styles.css">
     <title>Aluraflix</title>
@@ -14,3 +16,6 @@ encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="stric
 allowfullscreen></iframe>
 
 </body>
+
+
+</html>
