--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
 </head>     
 <body>
 
+
     <header>ALURAFLIX</header>
+
+    <div>
 <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
 <p>#homem-aranha</p>
+</div>
+
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=2I40NF_K8wSUFpy9" 
 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
