--- a/index.html
+++ b/index.html
@@ -3,25 +3,29 @@
 <head>
     <link rel="stylesheet" href="styles.css">
     <title>Aluraflix</title>
-</head>     
+</head>
+
 <body>
 
 
     <header>ALURAFLIX</header>
 
-<div>
-<h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
-<p>#homem-aranha</p>
-</div>
+    <div>
+        <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
+        <p>#homem-aranha</p>
+    </div>
 
-<div>
+    </section>
+    <div>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=2I40NF_K8wSUFpy9" 
-title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
-encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" 
-allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=2I40NF_K8wSUFpy9"
+            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen></iframe>
 
-<div>
+        <div>
+            </section>
+
 </body>
 
 
