--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>ALURAFLIX</header>
     <section>
         <div class="chamada-texto">
-            <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
+            <h1>ATRAVÉS DO ARANHAVERSO b</h1>
             <p>#homem-aranha</p>
         </div>
 
