--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@ encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="stric
 
             <div>
     </section>
-
+     
+    <section>
+        <h2>Filme e séries</h2>
+        <div>
+            
+        </div>
+    </section>
 </body>
 
 
