--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@ encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="stric
     <section>
         <h2>Filme e séries</h2>
         <div>
-        <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg">
+        <a href="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg">
+            <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg">
+        </a>
         </div>
     </section>
 </body>
