--- a/index.html
+++ b/index.html
@@ -32,7 +32,19 @@ encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="stric
         <a href="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg">
             <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg">
         </a>
-        </div>
+        <a href="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg">
+            <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg">
+        </a>  
+        <a href="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg">
+            <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg">
+        </a>  
+        <a href="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg">
+            <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg">
+        </a>  
+        <a href="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg">
+            <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg">
+        </a>  
+    </div>
     </section>
 </body>
 
