--- a/index.html
+++ b/index.html
@@ -43,8 +43,14 @@ encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="stric
         </a>  
         <a href="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg">
             <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg">
-        </a>  
-    </div>
+        </a>
+        <a href="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg">
+            <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg">
+        </a> 
+        <a href="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg">
+            <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg">
+        </a> 
+           </div>
     </section>
 </body>
 
