--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@ encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="stric
         <a href="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg">
             <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg">
         </a> 
+        <a href="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg">
+            <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg">
+        </a> 
            </div>
     </section>
 </body>
